--- a/wedding/pubspec.yaml
+++ b/wedding/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   go_router: ^9.0.3
+  firebase_core: ^2.15.0
+  firebase_auth: ^4.7.1
+  cloud_firestore: ^4.8.3
+  provider: ^6.0.5
+  firebase_ui_auth: ^1.6.1
 
 dev_dependencies:
   flutter_test:
